panko/tests/testsuite/snapshots/testsuite__layout-panko__tests__cases__execute__initialisation__test_braced_initialisation_of_multidimensional_array.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=layout"
    - "--stop-after=layout"
    - panko/tests/cases/execute/initialisation/test_braced_initialisation_of_multidimensional_array.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/initialisation/test_braced_initialisation_of_multidimensional_array.c"
   (declaration external (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)) ∅)
   (function-definition external stack-size=120
      (main~1 `fn() -> int` (static main))
      (compound-statement
         (definition (xs~3 `array<array<int; 2>; 3>` @0)
            (braced
               (subobject +0 (1 `int` @0))
               (subobject +4 (2 `int` @4))
               (subobject +8 (3 `int` @8))
               (subobject +16 (5 `int` @16))
               (subobject +20 (6 `int` @20))))
         (expression
            (call `int` @24
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @32
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @40
                  (noop-type-conversion `ptr<char>` @40
                     (addressof `ptr<array<char; 9>>` @40
                        (string `array<char; 9>` @void "%zu %zu\n\0"))))
               (3 `unsigned long` @48)
               (2 `unsigned long` @56)))
         (expression
            (call `int` @24
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @32
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @40
                  (noop-type-conversion `ptr<char>` @40
                     (addressof `ptr<array<char; 7>>` @40
                        (string `array<char; 7>` @void "%d %d\n\0"))))
               (deref `int` @48
                  (ptr-add `ptr<int>` @56
                     (noop-type-conversion `ptr<int>` @56
                        (addressof `ptr<array<int; 2>>` @56
                           (deref `array<int; 2>` @56
                              (ptr-add `ptr<array<int; 2>>` @64
                                 (noop-type-conversion `ptr<array<int; 2>>` @64
                                    (addressof `ptr<array<array<int; 2>; 3>>` @64
                                       (xs~3 `array<array<int; 2>; 3>` @0)))
                                 (sign-extend `long` @72 (0 `int` @80))))))
                     (sign-extend `long` @72 (0 `int` @80))))
               (deref `int` @72
                  (ptr-add `ptr<int>` @80
                     (noop-type-conversion `ptr<int>` @80
                        (addressof `ptr<array<int; 2>>` @80
                           (deref `array<int; 2>` @80
                              (ptr-add `ptr<array<int; 2>>` @88
                                 (noop-type-conversion `ptr<array<int; 2>>` @88
                                    (addressof `ptr<array<array<int; 2>; 3>>` @88
                                       (xs~3 `array<array<int; 2>; 3>` @0)))
                                 (sign-extend `long` @96 (0 `int` @104))))))
                     (sign-extend `long` @96 (1 `int` @104))))))
         (expression
            (call `int` @24
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @32
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @40
                  (noop-type-conversion `ptr<char>` @40
                     (addressof `ptr<array<char; 7>>` @40
                        (string `array<char; 7>` @void "%d %d\n\0"))))
               (deref `int` @48
                  (ptr-add `ptr<int>` @56
                     (noop-type-conversion `ptr<int>` @56
                        (addressof `ptr<array<int; 2>>` @56
                           (deref `array<int; 2>` @56
                              (ptr-add `ptr<array<int; 2>>` @64
                                 (noop-type-conversion `ptr<array<int; 2>>` @64
                                    (addressof `ptr<array<array<int; 2>; 3>>` @64
                                       (xs~3 `array<array<int; 2>; 3>` @0)))
                                 (sign-extend `long` @72 (1 `int` @80))))))
                     (sign-extend `long` @72 (0 `int` @80))))
               (deref `int` @72
                  (ptr-add `ptr<int>` @80
                     (noop-type-conversion `ptr<int>` @80
                        (addressof `ptr<array<int; 2>>` @80
                           (deref `array<int; 2>` @80
                              (ptr-add `ptr<array<int; 2>>` @88
                                 (noop-type-conversion `ptr<array<int; 2>>` @88
                                    (addressof `ptr<array<array<int; 2>; 3>>` @88
                                       (xs~3 `array<array<int; 2>; 3>` @0)))
                                 (sign-extend `long` @96 (1 `int` @104))))))
                     (sign-extend `long` @96 (1 `int` @104))))))
         (expression
            (call `int` @24
               (addressof `ptr<fn(∅: ptr<char const>, ...) -> int>` @32
                  (printf~0 `fn(∅: ptr<char const>, ...) -> int` (static printf)))
               (noop-type-conversion `ptr<char const>` @40
                  (noop-type-conversion `ptr<char>` @40
                     (addressof `ptr<array<char; 7>>` @40
                        (string `array<char; 7>` @void "%d %d\n\0"))))
               (deref `int` @48
                  (ptr-add `ptr<int>` @56
                     (noop-type-conversion `ptr<int>` @56
                        (addressof `ptr<array<int; 2>>` @56
                           (deref `array<int; 2>` @56
                              (ptr-add `ptr<array<int; 2>>` @64
                                 (noop-type-conversion `ptr<array<int; 2>>` @64
                                    (addressof `ptr<array<array<int; 2>; 3>>` @64
                                       (xs~3 `array<array<int; 2>; 3>` @0)))
                                 (sign-extend `long` @72 (2 `int` @80))))))
                     (sign-extend `long` @72 (0 `int` @80))))
               (deref `int` @72
                  (ptr-add `ptr<int>` @80
                     (noop-type-conversion `ptr<int>` @80
                        (addressof `ptr<array<int; 2>>` @80
                           (deref `array<int; 2>` @80
                              (ptr-add `ptr<array<int; 2>>` @88
                                 (noop-type-conversion `ptr<array<int; 2>>` @88
                                    (addressof `ptr<array<array<int; 2>; 3>>` @88
                                       (xs~3 `array<array<int; 2>; 3>` @0)))
                                 (sign-extend `long` @96 (2 `int` @104))))))
                     (sign-extend `long` @96 (1 `int` @104)))))))))

----- stderr -----
